--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==3.1.6
 MarkupSafe==1.1.1
-Werkzeug==0.15.5
+Werkzeug>=3.1
 numpy>=2.2.4
 scipy>=1.15.2
 scikit-learn>=0.18
