--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask==3.1.0
 gunicorn==19.9.0
 itsdangerous>=2.2
 Jinja2==3.1.6
-MarkupSafe==1.1.1
+MarkupSafe>=2.0
 Werkzeug>=3.1
 numpy>=2.2.4
 scipy>=1.15.2
