--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-Flask==3.1.0
-gunicorn==20.1.0
+Flask>=3.1.0
+gunicorn>=20.1.0
 itsdangerous>=2.2
-Jinja2==3.1.6
+Jinja2>=3.1.6
 MarkupSafe>=2.0
 Werkzeug>=3.1
 numpy>=2.2.4
 scipy>=1.15.2
-scikit-learn>=0.18
+scikit-learn>=0.24.2
 matplotlib>=3.10.1
 pandas>=2.2.3
 
